--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   gap: 10px;
   background-color: #1a1f1e;
   min-height: 10vh;
+  color: whitesmoke;
 }
 .search{
   border-radius: 10px;
@@ -21,14 +22,20 @@
   padding-left: 10px;
 }
 .allBooks{
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  gap: 10px;
+  gap: 20px;
   padding: 20px;
   width: 65%;
   min-height: 90vh;
+
   /* border: 1px solid red; */
 }
 .listContainer{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   text-align: center;
   padding: 20px;
   width: 35%;
@@ -51,21 +58,21 @@
   transition: transform .3s;
 }
 .card:hover{
-  transform: scale(1.07);
+  transform: translateY(-10px);
 }
 .bodyListContainer{
   width: 100%;
   display: grid;
   gap: 1rem;
-  grid-auto-rows: 22rem;
-  grid-template-columns: repeat(auto-fit,minmax(min(100%,8rem),1fr));
+  grid-auto-rows: 20rem;
+  grid-template-columns: repeat(auto-fill,minmax(min(100%,8rem),1fr));
 }
 .bodyContainer{
   width: 100%;
   display: grid;
   gap: 10px;
-  grid-auto-rows: 22rem;
-  grid-template-columns: repeat(auto-fit,minmax(min(100%,8rem),1fr));
+  grid-auto-rows: 20rem;
+  grid-template-columns: repeat(auto-fill,minmax(min(100%,8rem),1fr));
 }
 .delete{
   background-color: rgba(196, 4, 42, 0.856);
